--- a/.github/workflows/osv-scanner.yml
+++ b/.github/workflows/osv-scanner.yml
@@ -9,5 +9,5 @@ jobs:
       - uses: actions/checkout@v3
       - name: OSV Scanner
         run: |
-          docker run -it -v ${PWD}:/src ghcr.io/google/osv-scanner -r .
+           docker run --rm -v $PWD:/repo -w /repo ghcr.io/google/osv-scanner:latest -r .
         continue-on-error: true
