--- a/.github/workflows/osv-scanner.yml
+++ b/.github/workflows/osv-scanner.yml
@@ -9,9 +9,24 @@ jobs:
       - uses: actions/checkout@v3
       - name: OSV Scanner
         run: |
-           docker run --rm -v $PWD:/repo -w /repo ghcr.io/google/osv-scanner:latest -r .
+           docker run --rm -v $PWD:/repo -w /repo ghcr.io/google/osv-scanner:latest -r . > VULNERABILITY.md
         continue-on-error: true
-      - name: Creating Pull Request
-        uses: heitorpolidoro/autocreate-pr@v2
-        env:
-          Kshitiz-Mhto: ${{ secrets.PERSONAL }}
+      - name: Create Pull Request
+        id: cpr
+        uses: peter-evans/create-pull-request@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          committer: GitHub <noreply@github.com>
+          author: ${{ github.actor }} <${{ github.actor }}@gmail.com>
+          signoff: true
+          title: Add vulnerability report
+          commit-message: Add vulnerability report
+          body: |
+            *Update Vulnerablity report*
+          delete-branch: true
+          labels: enhancement
+          assignees: Kshitiz-Mhto
+          reviewers: Kshitiz-Mhto
+          draft: false
+
+           
