--- a/.github/workflows/osv-scanner.yml
+++ b/.github/workflows/osv-scanner.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: OSV Scanner
         run: |
-           docker run --rm -v $PWD:/repo -w /repo ghcr.io/google/osv-scanner:latest --format markdown -r . > VULNERABILITY.md |  grep -vE '^Scanned|^Scanning' 
+           docker run --rm -v $PWD:/repo -w /repo ghcr.io/google/osv-scanner:latest --format markdown -r . |  grep -vE '^Scanned|^Scanning' > VULNERABILITY.md 
         continue-on-error: true
       - name: Create Pull Request
         id: cpr
