--- a/.github/workflows/osv-scanner.yml
+++ b/.github/workflows/osv-scanner.yml
@@ -1,17 +1,16 @@
 name: OSV Scanner
 
-on:
-  schedule:
-    - cron: '0 0 1 * *'
+on: push
+  # schedule:
+  #   - cron: '0 0 1 * *'
 
 jobs:
   scan:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
       - name: OSV Scanner
         run: |
-           docker run --rm -v $PWD:/repo -w /repo ghcr.io/google/osv-scanner:latest -r . > VULNERABILITY.md
+           docker run --rm -v $PWD:/repo -w /repo ghcr.io/google/osv-scanner:latest --format markdown -r . | grep -vE '^((Scanning|Scanned).*)$' > VULNERABILITY.md
         continue-on-error: true
       - name: Create Pull Request
         id: cpr
