--- a/.github/workflows/osv-scanner.yml
+++ b/.github/workflows/osv-scanner.yml
@@ -18,7 +18,7 @@ jobs:
           pwd
           ls
           docker run --rm -v $PWD:/repo -w /repo ghcr.io/google/osv-scanner --format markdown -r . | grep -vE '^((Scanning|Scanned).*)$' > VULNERABILITY.md
-       # continue-on-error: true
+        continue-on-error: true
       - uses: actions/checkout@v3
       - name: Create Pull Request
         id: cpr
