--- a/.github/workflows/osv-scanner.yml
+++ b/.github/workflows/osv-scanner.yml
@@ -11,6 +11,8 @@ jobs:
   #    image: ghcr.io/google/osv-scanner:latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - name: Scan for vulnerabilities
       
         uses: docker://ghcr.io/google/osv-scanner:latest
