--- a/.github/workflows/osv-scanner.yml
+++ b/.github/workflows/osv-scanner.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Scan for vulnerabilities
         uses: docker://ghcr.io/google/osv-scanner:latest
         with:
-          args: --format markdown -r . 2>&1 | grep -vE '^((Scanning|Scanned).*)$' > VULNERABILITY.md
+          args: --format markdown -r . --exclude=.git --exclude=.github  2>&1 | grep -vE '^((Scanning|Scanned).*)$' > VULNERABILITY.md
         continue-on-error: true
         
       - name: cmd
