--- a/.github/workflows/osv-scanner.yml
+++ b/.github/workflows/osv-scanner.yml
@@ -18,11 +18,11 @@ jobs:
       - name: Scan for vulnerabilities
         uses: docker://ghcr.io/google/osv-scanner:latest
         with:
-          args: --format markdown -r . --exclude=.git --exclude=.github  2>&1 | grep -vE '^((Scanning|Scanned).*)$' > VULNERABILITY.md
+          args: --format markdown -r .
         continue-on-error: true
         
-      - name: cmd
-        run: ls
+      - name: Save scan output to file
+        run: echo "${{ steps.osv_scan.outputs.stdout }}" | grep -vE '^((Scanning|Scanned).*)$' > VULNERABILITY.md
       
    #   - uses: ghcr.io/google/osv-scanner
      # - name: OSV Scanner
