--- a/.github/workflows/osv-scanner.yml
+++ b/.github/workflows/osv-scanner.yml
@@ -20,6 +20,9 @@ jobs:
           args: --format markdown -r .
         continue-on-error: true
         
+      - name: op
+        run: echo "${{ steps.osv_scan.outputs.stdout }}" 
+        
       - name: Save scan output to file
         run: echo "${{ steps.osv_scan.outputs.stdout }}" | grep -vE '^((Scanning|Scanned).*)$' > VULNERABILITY.md
       
