--- a/.github/workflows/osv-scanner.yml
+++ b/.github/workflows/osv-scanner.yml
@@ -19,12 +19,14 @@ jobs:
         with:
           args: --format markdown -r .
         continue-on-error: true
-        
-      - name: op
-        run: echo "${{ steps.osv_scan.outputs.stdout }}" 
-        
-      - name: Save scan output to file
-        run: echo "${{ steps.osv_scan.outcome }}" | grep -vE '^((Scanning|Scanned).*)$' > VULNERABILITY.md
+      - name: Store scan output as artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: VULNERABILITY.md
+          path: ./
+      
+     # - name: Save scan output to file
+      #  run: echo "${{ steps.osv_scan.outcome }}" | grep -vE '^((Scanning|Scanned).*)$' > VULNERABILITY.md
       
       - name: Create Pull Request
         id: cpr
