--- a/.github/workflows/osv-scanner.yml
+++ b/.github/workflows/osv-scanner.yml
@@ -22,7 +22,10 @@ jobs:
         continue-on-error: true
       
       - name: Save scan output to file
-        run: cat ./VULNERABILITY.md 
+        run: |
+          ls -a
+          cat ./VULNERABILITY.md 
+        continue-on-error: true
         #echo "${{ steps.osv_scan.outputs.result }}" | grep -vE '^((Scanning|Scanned).*)$' > VULNERABILITY.md
       
       - name: Create Pull Request
